[package]

name = "nanomorph"
version = "0.1.0"
authors = ["Kevin Kelley <kevin@kelleysoft.com>"]

[dependencies.nanovg]
git = "https://github.com/KevinKelley/nanovg-rs.git"

#[dependencies.glfw]
#git = "https://github.com/bjz/glfw-rs.git"
#
#[dependencies.gl]
#git = "https://github.com/bjz/gl-rs.git"
