[package]

name = "nanomorph-demo"
version = "0.0.0"
readme = "README.md"
authors = ["Kevin Kelley <kevin@kelleysoft.com>"]
tags = []

[[bin]]

name = "nanomorph-demo"
path = "src/main.rs"

[dependencies.graphics]
git = "https://github.com/pistondevelopers/rust-graphics"

[dependencies.piston]
git = "https://github.com/pistondevelopers/piston/"

[dependencies.glfw_game_window]
git = "https://github.com/PistonDevelopers/glfw_game_window"

